syntax = "proto3";

message Matching {
    int32 userId = 1;
    string name = 2;
    bool isMatch = 3;
}
